# zerodrop_rust

./: README.md  package-lock.json  package.json
public/: index.html  manifest.json
src/: App.css  App.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: charset.rs  commands.rs  main.rs  password.rs
src/fonts/: Gidole-Regular.eot
