[package]
name = "zerodrop"
version = "1.0.0"
description = "ZeroDrop"
authors = ["Cyclip <ifazahmed375@gmail.com>"]
license = "MIT"
repository = "https://ww.github.com/Cyclip/zerodrop_rust"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
clipboard = "0.5.0"
rand_chacha = "0.3.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
